fix: add overflow hidden at banner-section

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ body {
     background-position: center center;     /* centraliza a imagem */
     background-repeat: no-repeat;
     margin-top: 70px;
+    overflow: hidden;
 }
 
 /* Hero Section */
